hopefully fix overflow

--- a/docs/src/app/global.css
+++ b/docs/src/app/global.css
@@ -4,11 +4,12 @@
 
 /* Fix TOC overflow on production builds */
 #nd-toc {
-  overflow-y: auto;
-  overflow-x: hidden;
+  overflow-y: auto !important;
+  overflow-x: hidden !important;
 }
 
 #nd-toc > div {
-  overflow-y: auto;
-  overflow-x: hidden;
+  overflow-y: auto !important;
+  overflow-x: hidden !important;
+  max-height: 100% !important;
 }
